--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -43,7 +43,7 @@
             <MenuItem class="javax.swing.JMenuItem" name="jMenuQuestionHelp">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/question-frame.png"/>
+                  <Image iconType="3" name="/image/question-frame.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x41f;&#x43e;&#x43c;&#x43e;&#x449;&#x44c;"/>
               </Properties>
@@ -113,7 +113,7 @@
               <JTabbedPaneConstraints tabName="&#x413;&#x43b;&#x430;&#x432;&#x43d;&#x430;&#x44f;">
                 <Property name="tabTitle" type="java.lang.String" value="&#x413;&#x43b;&#x430;&#x432;&#x43d;&#x430;&#x44f;"/>
                 <Property name="tabIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/home.png"/>
+                  <Image iconType="3" name="/image/home.png"/>
                 </Property>
               </JTabbedPaneConstraints>
             </Constraint>
@@ -172,7 +172,7 @@
             <Component class="javax.swing.JButton" name="jButtonRunOutfile">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/upload.png"/>
+                  <Image iconType="3" name="/image/upload.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x43f;&#x440;&#x430;&#x432;&#x438;&#x442;&#x44c; &#x43d;&#x430; &#x441;&#x435;&#x440;&#x432;&#x435;&#x440;"/>
               </Properties>
@@ -183,7 +183,7 @@
             <Component class="javax.swing.JButton" name="jButtonRunUpload">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/database-export.png"/>
+                  <Image iconType="3" name="/image/database-export.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x412;&#x44b;&#x433;&#x440;&#x443;&#x437;&#x438;&#x442;&#x44c; &#x438;&#x437; &#x431;&#x430;&#x437;&#x44b;"/>
               </Properties>
@@ -194,7 +194,7 @@
             <Component class="javax.swing.JButton" name="jButtonRunDownload">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/database-import.png"/>
+                  <Image iconType="3" name="/image/database-import.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x417;&#x430;&#x433;&#x440;&#x443;&#x437;&#x438;&#x442;&#x44c; &#x432; &#x431;&#x430;&#x437;&#x443;"/>
               </Properties>
@@ -205,7 +205,7 @@
             <Component class="javax.swing.JButton" name="jButtonRunInfile">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/download.png"/>
+                  <Image iconType="3" name="/image/download.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x41f;&#x440;&#x438;&#x43d;&#x44f;&#x442;&#x44c; &#x441; &#x441;&#x435;&#x440;&#x432;&#x435;&#x440;&#x430;"/>
               </Properties>
@@ -216,7 +216,7 @@
             <Component class="javax.swing.JButton" name="jButtonRunAll">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/arrow_refresh.png"/>
+                  <Image iconType="3" name="/image/arrow_refresh.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x417;&#x430;&#x43f;&#x443;&#x441;&#x442;&#x438;&#x442;&#x44c; &#x43e;&#x431;&#x43c;&#x435;&#x43d;"/>
               </Properties>
@@ -270,7 +270,7 @@
               <JTabbedPaneConstraints tabName="&#x420;&#x430;&#x441;&#x43f;&#x438;&#x441;&#x430;&#x43d;&#x438;&#x435;">
                 <Property name="tabTitle" type="java.lang.String" value="&#x420;&#x430;&#x441;&#x43f;&#x438;&#x441;&#x430;&#x43d;&#x438;&#x435;"/>
                 <Property name="tabIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/clock.png"/>
+                  <Image iconType="3" name="/image/clock.png"/>
                 </Property>
               </JTabbedPaneConstraints>
             </Constraint>
@@ -348,7 +348,7 @@
             <Component class="javax.swing.JButton" name="jButtonAddJob">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/plus.png"/>
+                  <Image iconType="3" name="/image/plus.png"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[42, 23]"/>
@@ -361,7 +361,7 @@
             <Component class="javax.swing.JButton" name="jButtonRemoveJob">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/minus.png"/>
+                  <Image iconType="3" name="/image/minus.png"/>
                 </Property>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[41, 23]"/>
@@ -401,7 +401,7 @@
               <JTabbedPaneConstraints tabName="&#x41d;&#x430;&#x441;&#x442;&#x440;&#x43e;&#x439;&#x43a;&#x438;">
                 <Property name="tabTitle" type="java.lang.String" value="&#x41d;&#x430;&#x441;&#x442;&#x440;&#x43e;&#x439;&#x43a;&#x438;"/>
                 <Property name="tabIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/property.png"/>
+                  <Image iconType="3" name="/image/property.png"/>
                 </Property>
               </JTabbedPaneConstraints>
             </Constraint>
@@ -571,7 +571,7 @@
             <Component class="javax.swing.JButton" name="jButtonCancel">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/cancel.png"/>
+                  <Image iconType="3" name="/image/cancel.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x41e;&#x442;&#x43c;&#x435;&#x43d;&#x430;"/>
               </Properties>
@@ -582,7 +582,7 @@
             <Component class="javax.swing.JButton" name="jButtonApply">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/Interface/accept.png"/>
+                  <Image iconType="3" name="/image/accept.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&#x41f;&#x440;&#x438;&#x43c;&#x435;&#x43d;&#x438;&#x442;&#x44c;"/>
               </Properties>
@@ -709,6 +709,9 @@
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
               <JTabbedPaneConstraints tabName="&#x421;&#x438;&#x43d;&#x445;&#x440;&#x43e;&#x43d;&#x438;&#x437;&#x430;&#x446;&#x438;&#x44f;">
                 <Property name="tabTitle" type="java.lang.String" value="&#x421;&#x438;&#x43d;&#x445;&#x440;&#x43e;&#x43d;&#x438;&#x437;&#x430;&#x446;&#x438;&#x44f;"/>
+                <Property name="tabIcon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/image/sync.png"/>
+                </Property>
               </JTabbedPaneConstraints>
             </Constraint>
           </Constraints>
