--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -790,9 +790,9 @@
                               <Component id="jTextFieldSyncFTPPass" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                       <Component id="jButtonRunSynch" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="167" max="32767" attributes="0"/>
+                      <EmptySpace pref="138" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -851,6 +851,9 @@
                   <ComponentRef name="jPanelSync"/>
                 </Property>
               </AccessibilityProperties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonRunSynchActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
