--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -302,10 +302,13 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jButtonAddJob" min="-2" max="-2" attributes="1"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jButtonRemoveJob" min="-2" max="-2" attributes="1"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jButtonAddTest" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                                  <Component id="jButtonRemoveJob" alignment="0" min="-2" max="-2" attributes="1"/>
+                              </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="185" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="175" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -324,6 +327,8 @@
                                   <Component id="jButtonAddJob" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jButtonRemoveJob" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
+                              <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
+                              <Component id="jButtonAddTest" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -404,6 +409,14 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Component class="javax.swing.JButton" name="jButtonAddTest">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="ADD"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonAddTestActionPerformed"/>
+              </Events>
+            </Component>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanelOptions">
