fix: исправлена ошибка создания задания

--- a/src/Interface/MainFrame.form
+++ b/src/Interface/MainFrame.form
@@ -299,16 +299,16 @@
                               <Component id="jComboBoxFrequency" alignment="0" max="32767" attributes="1"/>
                               <Component id="jSpinnerTimer" alignment="0" max="32767" attributes="1"/>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="jButtonAddJob" min="-2" max="-2" attributes="1"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jButtonAddTest" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
-                                  <Component id="jButtonRemoveJob" alignment="0" min="-2" max="-2" attributes="1"/>
+                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="jButtonAddTest" alignment="0" max="32767" attributes="1"/>
+                              <Group type="102" alignment="0" attributes="0">
+                                  <Component id="jButtonAddJob" min="-2" max="-2" attributes="1"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jButtonRemoveJob" min="-2" max="-2" attributes="1"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="175" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="185" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -327,7 +327,7 @@
                                   <Component id="jButtonAddJob" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jButtonRemoveJob" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="81" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="jButtonAddTest" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
