--- a/src/Interface/AboutFrame.form
+++ b/src/Interface/AboutFrame.form
@@ -81,7 +81,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelProjectName">
       <Properties>
-        <Property name="text" type="java.lang.String" value="AvtoURIB"/>
+        <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="MainFrame.ver()" type="code"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
